# projects

./: Mistral_7B_Instruct_v0_2.ipynb  Product hackathon  ROS2 arm simulation
schizophrenia prediction/schizophrenia prediction/schizophreniaprediction/: Module_01_preprocessing.ipynb  Module_02_visualization.ipynb  Module_3_logisticRegression.ipynb  Module_4_RandomForest.ipynb  Module_5_decisiontree.ipynb  Module_6_SVM.ipynb  Module_7_GUI_Prediction.ipynb  dataset.csv  final-data.csv  transformed.csv
schizophrenia prediction/schizophrenia prediction/schizophreniaprediction/final_models/: dt_final.pkl  logisticR_final.pkl  rf_final.pkl  svm_final.pkl
xarmrob/: package.xml  setup.cfg  setup.py
xarmrob/config/: robot_xarm_info.yaml
xarmrob/launch/: xarm_angle_sliders.launch.py  xarm_automatic.launch.py  xarm_cmd_sliders.launch.py  xarm_cmd_sliders_param.launch.py  xarm_endpoint_sliders.launch.py  xarm_no_cmd.launch.py  xarm_no_cmd_param.launch.py
xarmrob/urdf/: robot-xarm.urdf
xarmrob/xarmrob/: angle_keyboard.py  angle_sliders.py  cmd_keyboard.py  cmd_sliders.py  command_xarm.py  endpoint_automatic_smooth.py  endpoint_keyboard.py  endpoint_keyboard_smooth.py  endpoint_sliders.py  parse_svg_for_robot_arm_v03.py  smooth_interpolation.py  xarm_kinematics.py
